apps/react-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-demo
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: react-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
