apps/react-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-demo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: react.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-demo
                port:
                  number: 80
